# enterprise-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 20260722_0001_create_enterprise_rag_schema.py
demo_data/documents/acme-erp/: closing_policy.md  support_playbook.txt
demo_data/documents/northwind-finance/: billing_handbook.md
docs/: architecture.md  demo-video-script.md  publish-checklist.md
examples/: ask_question_curl.sh  ask_question_request.json  upload_document_curl.sh
src/app/: main.py
src/app/api/: dependencies.py  error_handlers.py  middleware.py  router.py
src/app/core/: async_utils.py  config.py  db.py  exceptions.py  logging.py  request_context.py
src/app/integrations/: answer_provider.py  embedding_provider.py  mock_answer_provider.py  mock_embedding_provider.py  openai_answer_provider.py  openai_embedding_provider.py  provider_factory.py
src/app/models/: __init__.py  app_user.py  base.py  conversation.py  document_chunk.py  document_version.py  knowledge_document.py  llm_execution.py  message.py  organization.py
src/app/repositories/: base.py  conversation_repository.py  health_repository.py  knowledge_repository.py  llm_execution_repository.py  organization_repository.py  user_repository.py
src/app/schemas/: auth.py  (+7 more)
tests/: conftest.py  test_auth_and_org_routes.py  test_chat_routes.py  test_document_routes.py  test_health_route.py  test_jobs_route.py  test_retrieval_service.py  test_schema_models.py
(+21 files in other folders)
