[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t31-enterprise-rag-platform"
version = "0.1.0"
description = "Multi-tenant enterprise RAG platform with FastAPI, Celery, PostgreSQL, and PGVector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "psycopg[binary]>=3.2.0",
  "openai>=1.99.0",
  "pgvector>=0.3.6",
  "pypdf>=5.1.0",
  "streamlit>=1.47.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
seed-demo = "app.scripts.seed_demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
